clusters/bplab/frith/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frith-service
  namespace: frith
spec:
  selector:
    app: frith
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3334
  type: ClusterIP
